# HiggingFace

./: .gitignore  README.md  pyproject.toml
code/chapter1(transformer_model)/: Causallanguagemodeling.ipynb  pipeline.ipynb
code/chapter1(transformer_model)/my_local_model/: config.json
