[tool.poetry]
name = "hugginface"
version = "0.1.0"
description = "Learn HuggingFace LLM course"
authors = ["shafique khan <shafique18.18@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
datasets = ">=3.6.0,<4.0.0"
transformers = ">=4.30.0,<4.42.0"
tensorflow = ">=2.13.0,<2.14.0"
torch = ">=2.1.0,<2.2.0"
tensorflow-io-gcs-filesystem = "0.31.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"